<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.myweather.app.activity.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/appTv"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/chooseTv"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseTv"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/manualBtn"
                style="@style/BtnStyle"
                android:layout_marginTop="40dp"
                android:text="@string/manualBtn" />

            <Button
                android:id="@+id/locationBtn"
                style="@style/BtnStyle"
                android:layout_marginTop="40dp"
                android:text="@string/locationBtn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>